--- a/package.json
+++ b/package.json
@@ -8,22 +8,7 @@
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
-  },
-  "jest": {
-    "setupFiles": [
-      "<rootDir>/enzyme.setup.js"
-    ],
-    "testPathIgnorePatterns": [
-      "<rootDir>/.next/",
-      "<rootDir>/node_modules/"
-    ],
-    "moduleNameMapper": {
-      "\\.(css|scss)$": "identity-obj-proxy"
-    }
+    "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
     "@babel/core": "^7.5.4",
@@ -32,15 +17,11 @@
     "axios-mock-adapter": "^1.17.0",
     "babel-eslint": "^10.0.2",
     "babel-jest": "^24.8.0",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^6.0.1",
     "eslint-loader": "^2.2.1",
     "eslint-plugin-react": "^7.14.2",
     "express": "^4.17.1",
     "formik": "^1.5.7",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.8.0",
     "lodash": "^4.17.11",
     "mobx": "^5.11.0",
     "mobx-react-lite": "^1.4.1",
@@ -51,7 +32,6 @@
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.8.6",
     "react-spring": "^8.0.27",
-    "react-test-renderer": "^16.8.6",
     "serve-favicon": "^2.5.0",
     "yup": "^0.27.0"
   }
